--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <script>
   while (1) {
-      alert("!");
+      alert("こんにちは! 私は心やさしい違法なプログラムです!\n私はとてもやさしいので、無限ループを止める方法を伝授いたします。\nIE以外のブラウザーならばタブを閉じるか、「このページでこれ以上ダイアログボックスを生成しない」にチェックを入れれば、簡単に止まります。\nIEをお使いの方は…ご愁傷さまです…タスクマネージャーを使って強制終了してください。Ctrl + Alt + Deleteで開くことができますよ。それではよい一日を!");
   }
 </script>
